--- a/src/App.css
+++ b/src/App.css
@@ -39,9 +39,11 @@
   padding: 0px;
 }
 
-.trail { /* className for the trail elements */
+.trail {
+  /* className for the trail elements */
   position: absolute;
-  height: 148px; width: 128px;
+  height: 148px;
+  width: 128px;
   border-radius: 3px;
   /* background-image: url("https://media.giphy.com/media/vczfqM8tk2ITBHVbC8/giphy.gif"); */
   background-image: url("https://media.giphy.com/media/1xoZDFiwTKK7cFjbWt/giphy.gif");
@@ -55,18 +57,18 @@
 .equal-span {
   text-align: center;
   line-height: 1.21428571em;
-  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
   font-size: 150%;
   padding: 6px;
-  border-radius: .28571429rem;
+  border-radius: 0.28571429rem;
 }
 
 .exchange-button {
   text-align: center;
   line-height: 1.21428571em;
-  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
   padding: 6px;
-  border-radius: .28571429rem;
+  border-radius: 0.28571429rem;
 }
 
 .copy-button:hover {
@@ -124,7 +126,7 @@
 }
 
 .no-spinners {
-  -moz-appearance:textfield;
+  -moz-appearance: textfield;
 }
 .no-spinners::-webkit-outer-spin-button,
 .no-spinners::-webkit-inner-spin-button {
@@ -140,20 +142,21 @@
 }
 
 .calendar-input {
+  width: 200px;
   text-align: center;
   line-height: 1.21428571em;
-  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
-  padding: .67857143em 1em;
-  border: 1px solid rgba(34,36,38,.15);
-  border-radius: .28571429rem;
+  font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
+  padding: 0.67857143em 1em;
+  border: 1px solid rgba(34, 36, 38, 0.15);
+  border-radius: 0.28571429rem;
 }
 
 .coin-display {
   font-size: 150%;
   line-height: 1.21428571em;
-  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
-  border: 1px solid rgba(34,36,38,.15);
-  border-radius: .28571429rem;
+  font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
+  border: 1px solid rgba(34, 36, 38, 0.15);
+  border-radius: 0.28571429rem;
 }
 
 /* Links */
@@ -170,9 +173,8 @@ a:hover {
   color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
   background-color: #fff;
-  border: .05rem solid #fff;
+  border: 0.05rem solid #fff;
 }
-
 
 /*
  * Base structure
@@ -205,7 +207,6 @@ body.fun {
   max-width: 42em;
 }
 
-
 /*
  * Header
  */
@@ -218,16 +219,16 @@ body.fun {
 }
 
 .nav-masthead .nav-link {
-  padding: .25rem 0;
+  padding: 0.25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: rgba(255, 255, 255, 0.5);
   background-color: transparent;
-  border-bottom: .25rem solid transparent;
+  border-bottom: 0.25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: rgba(255, 255, 255, 0.25);
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -248,7 +249,6 @@ body.fun {
   }
 }
 
-
 /*
  * Cover
  */
@@ -256,14 +256,13 @@ body.fun {
   padding: 0 1.5rem;
 }
 .cover .btn-lg {
-  padding: .75rem 1.25rem;
+  padding: 0.75rem 1.25rem;
   font-weight: 700;
 }
-
 
 /*
  * Footer
  */
 .mastfoot {
-  color: rgba(255, 255, 255, .5);
+  color: rgba(255, 255, 255, 0.5);
 }
